--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-modal": "^3.6.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
@@ -24,5 +25,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage":"https://www.alfalfafox.com/xmasmichael"
+  "homepage": "https://www.alfalfafox.com/xmasmichael"
 }
