--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://www.alfalfafox.com/xmasmichael"
+  "homepage": "https://www.alfalfafox.com/xmasmichael",
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
